kubeops/config-syncer-secret-generation-from-rancher-capi/.chainsaw-test/chainsaw-step-01-apply-5.yaml
apiVersion: provisioning.cattle.io/v1
kind: Cluster
metadata:
  name: rancher-cluster
  namespace: kubeops-cluster-ns
spec:
  rkeConfig:
    machinePools:
    - controlPlaneRole: true
      machineConfigRef:
        apiVersion: elemental.cattle.io/v1beta1
        kind: MachineInventorySelectorTemplate
        name: configref01
      name: machine01
      quantity: 1
