kubeops/config-syncer-secret-generation-from-rancher-capi/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo-rancher-cluster-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
