kubeops/config-syncer-secret-generation-from-rancher-capi/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: config-syncer-secret-generation-from-rancher-capi
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
